# SpectralHolography

./: .gitignore  Cargo.toml  LICENSE  MATH_SPEC.md  PROOF_ROADMAP.md  README.md
.github/workflows/: ci.yml
benches/: ish_benchmark.rs
docs/: API.md  MATH_SPEC.md  PROOF_ROADMAP.md  SECURITY_ANALYSIS.md
docs/proof/: CheckCosMult.v  EndToEndSecurity.v  SpectralDefinitions2D.v  SpectralGeometry.v  SpectralIndistinguishability.v  SpectralIndistinguishability2D.v  SpectralProperties.v  SpectralProperties2D.v  _CoqProject
proof/: CheckCos.v  CheckCos2a.v  SpectralDefinitions.v  SpectralGeometry.v  SpectralProperties.v  _CoqProject
scripts/: measure_ratio.py  test_ish_dll.py  verify_math_risks.py
scripts/prototypes/: poc.py
src/: lib.rs
tests/: attack_malleability.rs  attack_poc.rs  attack_prefix_prediction.rs  attack_resampling.rs  attack_smoothness.rs  attack_variance.rs  dimension_collapse.rs  file_test.rs  performance_test.rs  security_test.rs  seed_strength_test.rs  variance_test.rs  weak_kdf_collision.rs
