[package]
name = "spectral_holography"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
argon2 = "0.5.3"

hmac = "0.12.1"
rand = "0.8"
rand_chacha = "0.3.1"
rand_core = "0.6"
rayon = "1.11.0"
sha2 = "0.10.9"
subtle = "2.6.1"
zeroize = { version = "1.8.2", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "ish_benchmark"
harness = false
